# gandi-client-rust

./: .gitignore  .releaserc.json  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs
